--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "atob": "^2.0.3",
+    "body-parser": "^1.18.2",
     "btoa": "^1.1.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
